# circuit-sim

./: CMakeLists.txt  README.md  main.html  main.js  main.wasm
html_template/: shell_minimal.html
include/: circuit.h
src/: circuit.c
